@@ -7,11 +7,12 @@
  */
 package com.powsybl.openloadflow.sa;
 
-import com.google.common.base.Stopwatch;
 import com.powsybl.action.Action;
 import com.powsybl.action.PhaseTapChangerTapPositionAction;
+import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.report.ReportNode;
 import com.powsybl.contingency.Contingency;
+import com.powsybl.iidm.network.LimitType;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.extensions.HvdcAngleDroopActivePowerControl;
 import com.powsybl.loadflow.LoadFlowParameters;
@@ -21,16 +22,16 @@ import com.powsybl.math.matrix.MatrixFactory;
 import com.powsybl.openloadflow.OpenLoadFlowParameters;
 import com.powsybl.openloadflow.dc.DcLoadFlowContext;
 import com.powsybl.openloadflow.dc.DcLoadFlowParameters;
-import com.powsybl.openloadflow.dc.equations.DcEquationType;
-import com.powsybl.openloadflow.dc.equations.DcVariableType;
+import com.powsybl.openloadflow.dc.equations.*;
 import com.powsybl.openloadflow.dc.fastdc.*;
+import com.powsybl.openloadflow.dc.fastdc.ConnectivityBreakAnalysis.ConnectivityAnalysisResult;
 import com.powsybl.openloadflow.equations.EquationSystem;
+import com.powsybl.openloadflow.equations.StateVector;
 import com.powsybl.openloadflow.graph.GraphConnectivityFactory;
 import com.powsybl.openloadflow.network.*;
 import com.powsybl.openloadflow.network.action.AbstractLfTapChangerAction;
 import com.powsybl.openloadflow.network.action.LfAction;
-import com.powsybl.openloadflow.network.action.LfActionUtils;
-import com.powsybl.openloadflow.network.impl.Networks;
+import com.powsybl.openloadflow.network.action.LfPhaseTapChangerAction;
 import com.powsybl.openloadflow.network.impl.PropagatedContingency;
 import com.powsybl.openloadflow.util.PerUnit;
 import com.powsybl.openloadflow.util.Reports;
@@ -44,8 +45,8 @@ import com.powsybl.security.results.*;
 import com.powsybl.security.strategy.OperatorStrategy;
 
 import java.util.*;
+import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 import static com.powsybl.openloadflow.dc.DcLoadFlowEngine.updateNetwork;
@@ -86,43 +87,46 @@ public class WoodburyDcSecurityAnalysis extends DcSecurityAnalysis {
 
     /**
      * Calculate post contingency states for a contingency.
-     * In case of connectivity break, a pre-computation has been done in {@link #calculatePostContingencyStatesForAContingencyBreakingConnectivity}
-     * to reset active power flow of hvdc lines on which one bus is lost.
      * If connectivity, a generator, a load or a phase tap changer is lost due to the contingency, the pre contingency flowStates are overridden.
      * @return the post contingency states for the contingency
      */
     private double[] calculatePostContingencyStates(DcLoadFlowContext loadFlowContext, DenseMatrix contingenciesStates, double[] flowStates,
-                                                    PropagatedContingency contingency, Map<String, ComputedContingencyElement> contingencyElementByBranch,
-                                                    Set<LfBus> disabledBuses, Set<String> elementsToReconnect, Set<LfBranch> partialDisabledBranches, ReportNode reportNode) {
-        return calculatePostContingencyAndOperatorStrategyStates(loadFlowContext, contingenciesStates, flowStates, contingency, contingencyElementByBranch, disabledBuses, elementsToReconnect,
-                partialDisabledBranches, Collections.emptyList(), Collections.emptyMap(), DenseMatrix.EMPTY, reportNode);
+                                                    ConnectivityAnalysisResult connectivityAnalysisResult, Map<String, ComputedContingencyElement> contingencyElementByBranch,
+                                                    ReportNode reportNode) {
+        return calculatePostContingencyAndOperatorStrategyStates(loadFlowContext, contingenciesStates, flowStates, connectivityAnalysisResult, contingencyElementByBranch,
+                Collections.emptyList(), Collections.emptyMap(), DenseMatrix.EMPTY, reportNode);
     }
 
     /**
-     * Calculate post contingency and post operator strategy states, for a contingency and operator strategy actions.
-     * In case of connectivity break, a pre-computation has been done in {@link #calculatePostContingencyAndOperatorStrategyStatesForAContingencyBreakingConnectivity}
-     * to reset active power flow of hvdc lines on which one bus is lost.
+     * Calculate post contingency and post operator strategy states, for a contingency and operator strategy actions
      * If connectivity, a generator, a load or a phase tap changer is lost/modified due to the contingency/operator strategy, the pre contingency flowStates are overridden.
      */
     private double[] calculatePostContingencyAndOperatorStrategyStates(DcLoadFlowContext loadFlowContext, DenseMatrix contingenciesStates, double[] flowStates,
-                                                                       PropagatedContingency contingency, Map<String, ComputedContingencyElement> contingencyElementByBranch,
-                                                                       Set<LfBus> disabledBuses, Set<String> elementsToReconnect, Set<LfBranch> partialDisabledBranches,
+                                                                       ConnectivityAnalysisResult connectivityAnalysisResult, Map<String, ComputedContingencyElement> contingencyElementByBranch,
                                                                        List<LfAction> operatorStrategyLfActions, Map<String, ComputedTapPositionChangeElement> tapPositionChangeElementByBranch,
                                                                        DenseMatrix actionsStates, ReportNode reportNode) {
+        PropagatedContingency contingency = connectivityAnalysisResult.getPropagatedContingency();
+
+        // reset active flow of hvdc line without power
+        connectivityAnalysisResult.getHvdcsWithoutPower().forEach(hvdcWithoutPower -> {
+            contingency.getGeneratorIdsToLose().add(hvdcWithoutPower.getConverterStation1().getId());
+            contingency.getGeneratorIdsToLose().add(hvdcWithoutPower.getConverterStation2().getId());
+        });
+
         List<ComputedContingencyElement> contingencyElements = contingency.getBranchIdsToOpen().keySet().stream()
-                .filter(element -> !elementsToReconnect.contains(element))
+                .filter(element -> !connectivityAnalysisResult.getElementsToReconnect().contains(element))
                 .map(contingencyElementByBranch::get)
                 .collect(Collectors.toList());
         List<ComputedTapPositionChangeElement> actionElements = operatorStrategyLfActions.stream()
                 .filter(AbstractLfTapChangerAction.class::isInstance)
                 .map(lfAction -> ((AbstractLfTapChangerAction<?>) lfAction).getChange().getBranch().getId())
                 .map(tapPositionChangeElementByBranch::get)
-                .collect(Collectors.toList());
+                .toList();
 
         var lfNetwork = loadFlowContext.getNetwork();
         Set<LfBranch> disabledBranches = contingency.getBranchIdsToOpen().keySet().stream().map(lfNetwork::getBranchById).collect(Collectors.toSet());
-        disabledBranches.addAll(partialDisabledBranches);
-        DisabledNetwork disabledNetwork = new DisabledNetwork(disabledBuses, disabledBranches);
+        disabledBranches.addAll(connectivityAnalysisResult.getPartialDisabledBranches());
+        DisabledNetwork disabledNetwork = new DisabledNetwork(connectivityAnalysisResult.getDisabledBuses(), disabledBranches);
 
         WoodburyEngine engine = new WoodburyEngine(loadFlowContext.getParameters().getEquationSystemCreationParameters(), contingencyElements, contingenciesStates, actionElements, actionsStates);
         double[] newFlowStates = flowStates;
@@ -130,7 +134,7 @@ public class WoodburyDcSecurityAnalysis extends DcSecurityAnalysis {
 
             // get the lost phase tap changers for this contingency
             Set<LfBranch> lostPhaseControllers = contingency.getBranchIdsToOpen().keySet().stream()
-                    .filter(element -> !elementsToReconnect.contains(element))
+                    .filter(element -> !connectivityAnalysisResult.getElementsToReconnect().contains(element))
                     .map(contingencyElementByBranch::get)
                     .map(ComputedContingencyElement::getLfBranch)
                     .filter(LfBranch::hasPhaseControllerCapability)
@@ -138,57 +142,22 @@ public class WoodburyDcSecurityAnalysis extends DcSecurityAnalysis {
 
             // if a phase tap changer is lost or if the connectivity have changed, we must recompute load flows
             // same if there is an action, as they are only on pst for now
-            if (!disabledBuses.isEmpty() || !lostPhaseControllers.isEmpty() || !operatorStrategyLfActions.isEmpty()) {
+            if (!connectivityAnalysisResult.getDisabledBuses().isEmpty() || !lostPhaseControllers.isEmpty() || !operatorStrategyLfActions.isEmpty()) {
                 newFlowStates = WoodburyEngine.runDcLoadFlowWithModifiedTargetVector(loadFlowContext, disabledNetwork, reportNode, operatorStrategyLfActions);
             }
             engine.toPostContingencyAndOperatorStrategyStates(newFlowStates);
         } else {
-            // if we have a contingency including the loss of a DC line or a generator or a load
-            // save base state for later restoration after each contingency
-            DcLoadFlowParameters lfParameters = loadFlowContext.getParameters();
-            NetworkState networkState = NetworkState.save(lfNetwork);
-            contingency.toLfContingency(lfNetwork, false)
-                    .ifPresent(lfContingency -> lfContingency.apply(lfParameters.getBalanceType()));
+            // if contingency includes the loss of a DC line or a generator or a load
+            // save bus dc base state for later restoration
+            List<BusDcState> busStates = ElementState.save(lfNetwork.getBuses(), BusDcState::save);
+            connectivityAnalysisResult.toLfContingency()
+                    .ifPresent(lfContingency -> lfContingency.applyOnGeneratorsLoadsHvdcs(loadFlowContext.getParameters().getBalanceType(), false));
             newFlowStates = WoodburyEngine.runDcLoadFlowWithModifiedTargetVector(loadFlowContext, disabledNetwork, reportNode, operatorStrategyLfActions);
             engine.toPostContingencyAndOperatorStrategyStates(newFlowStates);
-            networkState.restore();
+            ElementState.restore(busStates);
         }
 
         return newFlowStates;
-    }
-
-    /**
-     * Calculate post contingency states for a contingency breaking connectivity.
-     */
-    private double[] calculatePostContingencyStatesForAContingencyBreakingConnectivity(ConnectivityBreakAnalysis.ConnectivityAnalysisResult connectivityAnalysisResult, DcLoadFlowContext loadFlowContext,
-                                                                                       Map<String, ComputedContingencyElement> contingencyElementByBranch, double[] flowStates, DenseMatrix contingenciesStates,
-                                                                                       ReportNode reportNode) {
-        return calculatePostContingencyAndOperatorStrategyStatesForAContingencyBreakingConnectivity(connectivityAnalysisResult, loadFlowContext, contingencyElementByBranch, flowStates,
-                contingenciesStates, Collections.emptyList(), Collections.emptyMap(), DenseMatrix.EMPTY, reportNode);
-    }
-
-    /**
-     * Calculate post contingency and post operator strategy states, for a contingency breaking connectivity.
-     */
-    private double[] calculatePostContingencyAndOperatorStrategyStatesForAContingencyBreakingConnectivity(ConnectivityBreakAnalysis.ConnectivityAnalysisResult connectivityAnalysisResult, DcLoadFlowContext loadFlowContext,
-                                                                                                          Map<String, ComputedContingencyElement> contingencyElementByBranch, double[] flowStates, DenseMatrix contingenciesStates,
-                                                                                                          List<LfAction> operatorStrategyLfActions, Map<String, ComputedTapPositionChangeElement> tapPositionChangeElementByBranch, DenseMatrix actionsStates, ReportNode reportNode) {
-
-        PropagatedContingency contingency = connectivityAnalysisResult.getPropagatedContingency();
-        Set<LfBus> disabledBuses = connectivityAnalysisResult.getDisabledBuses();
-
-        // as we are processing a contingency with connectivity break, we have to reset active power flow of a hvdc line
-        // if one bus of the line is lost.
-        for (LfHvdc hvdc : loadFlowContext.getNetwork().getHvdcs()) {
-            if (Networks.isIsolatedBusForHvdc(hvdc.getBus1(), disabledBuses) ^ Networks.isIsolatedBusForHvdc(hvdc.getBus2(), disabledBuses)) {
-                contingency.getGeneratorIdsToLose().add(hvdc.getConverterStation1().getId());
-                contingency.getGeneratorIdsToLose().add(hvdc.getConverterStation2().getId());
-            }
-        }
-
-        return calculatePostContingencyAndOperatorStrategyStates(loadFlowContext, contingenciesStates, flowStates,
-                contingency, contingencyElementByBranch, disabledBuses, connectivityAnalysisResult.getElementsToReconnect(),
-                connectivityAnalysisResult.getPartialDisabledBranches(), operatorStrategyLfActions, tapPositionChangeElementByBranch, actionsStates, reportNode);
     }
 
     private void filterActions(List<Action> actions) {
@@ -200,30 +169,148 @@ public class WoodburyDcSecurityAnalysis extends DcSecurityAnalysis {
                 });
     }
 
+    static class NetworkDcRestrictiveLimits {
+        final double[] mostRestrictiveCurrentLimit;
+        final double[] mostRestrictiveActivePowerLimit;
+
+        public NetworkDcRestrictiveLimits(LfNetwork lfNetwork, List<LimitReduction> limitReductions) {
+            Objects.requireNonNull(lfNetwork);
+            Objects.requireNonNull(limitReductions);
+            mostRestrictiveCurrentLimit = new double[lfNetwork.getBranches().size()];
+            Arrays.fill(mostRestrictiveCurrentLimit, Double.MAX_VALUE);
+            mostRestrictiveActivePowerLimit = new double[lfNetwork.getBranches().size()];
+            Arrays.fill(mostRestrictiveActivePowerLimit, Double.MAX_VALUE);
+
+            LimitReductionManager limitReductionManager = LimitReductionManager.create(limitReductions);
+            for (LfBranch lfBranch : lfNetwork.getBranches()) {
+                if (lfBranch.getBus1() != null) {
+                    for (LfBranch.LfLimit limit : lfBranch.getLimits1(LimitType.CURRENT, limitReductionManager)) {
+                        if (limit.getReducedValue() < mostRestrictiveCurrentLimit[lfBranch.getNum()]) {
+                            mostRestrictiveCurrentLimit[lfBranch.getNum()] = limit.getReducedValue();
+                        }
+                    }
+
+                    for (LfBranch.LfLimit limit : lfBranch.getLimits1(LimitType.ACTIVE_POWER, limitReductionManager)) {
+                        if (limit.getReducedValue() < mostRestrictiveActivePowerLimit[lfBranch.getNum()]) {
+                            mostRestrictiveActivePowerLimit[lfBranch.getNum()] = limit.getReducedValue();
+                        }
+                    }
+                }
+
+                if (lfBranch.getBus2() != null) {
+                    for (LfBranch.LfLimit limit : lfBranch.getLimits2(LimitType.CURRENT, limitReductionManager)) {
+                        if (limit.getReducedValue() < mostRestrictiveCurrentLimit[lfBranch.getNum()]) {
+                            mostRestrictiveCurrentLimit[lfBranch.getNum()] = limit.getReducedValue();
+                        }
+                    }
+
+                    for (LfBranch.LfLimit limit : lfBranch.getLimits2(LimitType.ACTIVE_POWER, limitReductionManager)) {
+                        if (limit.getReducedValue() < mostRestrictiveActivePowerLimit[lfBranch.getNum()]) {
+                            mostRestrictiveActivePowerLimit[lfBranch.getNum()] = limit.getReducedValue();
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    static class NetworkDcVectorState {
+        final boolean[] disabled;
+        final double[] p1;
+        final double[] i1;
+        final double[] p2;
+        final double[] i2;
+
+        public NetworkDcVectorState(double[] postContingencyStates, LfNetwork lfNetwork, LfContingency lfContingency, DcEquationSystemCreationParameters parameters) {
+            this(postContingencyStates, lfNetwork, lfContingency, Collections.emptyMap(), parameters);
+        }
+
+        public NetworkDcVectorState(double[] postContingencyAndActionsStates, LfNetwork lfNetwork, LfContingency lfContingency,
+                                    Map<String, LfPhaseTapChangerAction> pstActionsByBranch, DcEquationSystemCreationParameters parameters) {
+            Objects.requireNonNull(postContingencyAndActionsStates);
+            Objects.requireNonNull(lfNetwork);
+            Objects.requireNonNull(pstActionsByBranch);
+            Objects.requireNonNull(parameters);
+            disabled = new boolean[lfNetwork.getBranches().size()];
+            p1 = new double[lfNetwork.getBranches().size()];
+            i1 = new double[lfNetwork.getBranches().size()];
+            p2 = new double[lfNetwork.getBranches().size()];
+            i2 = new double[lfNetwork.getBranches().size()];
+            StateVector sv = new StateVector(postContingencyAndActionsStates);
+            Arrays.fill(disabled, false);
+            if (lfContingency != null) {
+                for (LfBranch disabledBranch : lfContingency.getDisabledNetwork().getBranches()) {
+                    disabled[disabledBranch.getNum()] = true;
+                }
+            }
+            double dcPowerFactor = parameters.getDcPowerFactor();
+            for (LfBranch branch : lfNetwork.getBranches()) {
+                PiModel piModel = pstActionsByBranch.containsKey(branch.getId()) ? pstActionsByBranch.get(branch.getId()).getChange().getNewPiModel()
+                        : branch.getPiModel();
+                p1[branch.getNum()] = branch.getP1() instanceof ClosedBranchSide1DcFlowEquationTerm ? ((ClosedBranchSide1DcFlowEquationTerm) branch.getP1()).eval(sv, piModel) : Double.NaN;
+                i1[branch.getNum()] = Math.abs(p1[branch.getNum()]) / dcPowerFactor;
+                p2[branch.getNum()] = branch.getP2() instanceof ClosedBranchSide2DcFlowEquationTerm ? ((ClosedBranchSide2DcFlowEquationTerm) branch.getP2()).eval(sv, piModel) : Double.NaN;
+                i2[branch.getNum()] = Math.abs(p2[branch.getNum()]) / dcPowerFactor;
+            }
+        }
+
+        void detectBranchViolations(LimitViolationManager limitViolationManager, LfNetwork lfNetwork, NetworkDcRestrictiveLimits dcRestrictiveLimits) {
+            limitViolationManager.detectBranchesViolations(lfNetwork,
+                    branch -> disabled[branch.getNum()],
+                    branch -> dcRestrictiveLimits.mostRestrictiveCurrentLimit[branch.getNum()] < i1[branch.getNum()]
+                            || dcRestrictiveLimits.mostRestrictiveCurrentLimit[branch.getNum()] < i2[branch.getNum()],
+                    branch -> dcRestrictiveLimits.mostRestrictiveActivePowerLimit[branch.getNum()] < p1[branch.getNum()]
+                            || dcRestrictiveLimits.mostRestrictiveActivePowerLimit[branch.getNum()] < p2[branch.getNum()],
+                    branch -> i1[branch.getNum()],
+                    branch -> p1[branch.getNum()],
+                    branch -> {
+                        throw new PowsyblException("s1 useless");
+                    },
+                    branch -> i2[branch.getNum()],
+                    branch -> p2[branch.getNum()],
+                    branch -> {
+                        throw new PowsyblException("s2 useless");
+                    });
+        }
+
+        AbstractNetworkResult.BranchResultCreator createBranchResultCreator() {
+            return (branch, preContingencyBranchP1, preContingencyBranchOfContingencyP1, createExtension) -> {
+                int num = branch.getNum();
+                double flowTransfer = Double.NaN;
+                if (!Double.isNaN(preContingencyBranchP1) && !Double.isNaN(preContingencyBranchOfContingencyP1)) {
+                    flowTransfer = (p1[num] * PerUnit.SB - preContingencyBranchP1) / preContingencyBranchOfContingencyP1;
+                }
+                double currentScale1 = PerUnit.ib(branch.getBus1().getNominalV()); // FIXME : what happens if the branch is opened ?
+                double currentScale2 = PerUnit.ib(branch.getBus2().getNominalV());
+                var branchResult = new BranchResult(branch.getId(), p1[num] * PerUnit.SB, Double.NaN, currentScale1 * i1[num],
+                        p2[num] * PerUnit.SB, Double.NaN, currentScale2 * i2[num], flowTransfer);
+                return List.of(branchResult);
+            };
+        }
+    }
+
     /**
      * Returns the post contingency result associated to given contingency and post contingency states.
      */
     private PostContingencyResult computePostContingencyResultFromPostContingencyStates(DcLoadFlowContext loadFlowContext, Contingency contingency, LfContingency lfContingency,
                                                                                         LimitViolationManager preContingencyLimitViolationManager, PreContingencyNetworkResult preContingencyNetworkResult,
                                                                                         boolean createResultExtension, SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters,
-                                                                                        double[] postContingencyStates, List<LimitReduction> limitReductions) {
+                                                                                        double[] postContingencyStates, List<LimitReduction> limitReductions, NetworkDcRestrictiveLimits dcRestrictiveLimits) {
 
         // update network state with post contingency states
         LfNetwork lfNetwork = loadFlowContext.getNetwork();
-        loadFlowContext.getEquationSystem().getStateVector().set(postContingencyStates);
-        updateNetwork(lfNetwork, loadFlowContext.getEquationSystem(), postContingencyStates);
 
-        lfContingency.apply(loadFlowContext.getParameters().getBalanceType());
+        NetworkDcVectorState dcVecState = new NetworkDcVectorState(postContingencyStates, lfNetwork, lfContingency, loadFlowContext.getParameters().getEquationSystemCreationParameters());
 
         // update post contingency network result
-        var postContingencyNetworkResult = new PostContingencyNetworkResult(lfNetwork, monitorIndex, createResultExtension, preContingencyNetworkResult, contingency);
-        postContingencyNetworkResult.update();
+        var postContingencyNetworkResult = new PostContingencyNetworkResult(lfNetwork, monitorIndex, createResultExtension,
+                dcVecState.createBranchResultCreator(), preContingencyNetworkResult, contingency);
+        postContingencyNetworkResult.update(lfBranch -> dcVecState.disabled[lfBranch.getNum()]);
 
         // detect violations
         var postContingencyLimitViolationManager = new LimitViolationManager(preContingencyLimitViolationManager, limitReductions, violationsParameters);
-        postContingencyLimitViolationManager.detectViolations(lfNetwork);
+        dcVecState.detectBranchViolations(postContingencyLimitViolationManager, lfNetwork, dcRestrictiveLimits);
 
-        // connectivity result due to the application of the lf contingency
         var connectivityResult = new ConnectivityResult(
                 lfContingency.getCreatedSynchronousComponentsCount(), 0,
                 lfContingency.getDisconnectedLoadActivePower() * PerUnit.SB,
@@ -240,116 +327,87 @@ public class WoodburyDcSecurityAnalysis extends DcSecurityAnalysis {
     }
 
     /**
-     * Returns post contingency result associated to the given contingency, with given supplier of post contingency states.
-     */
-    private PostContingencyResult processPostContingencyResult(DcLoadFlowContext context, PropagatedContingency contingency, LfContingency lfContingency, Supplier<double[]> postContingencyStatesSupplier,
-                                                               LimitViolationManager preContingencyLimitViolationManager, PreContingencyNetworkResult preContingencyNetworkResult,
-                                                               boolean createResultExtension, SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters,
-                                                               List<LimitReduction> limitReductions) {
-        logPostContingencyStart(context.getNetwork(), lfContingency);
-        Stopwatch stopwatch = Stopwatch.createStarted();
-
-        double[] postContingencyStates = postContingencyStatesSupplier.get();
-        PostContingencyResult postContingencyResult = computePostContingencyResultFromPostContingencyStates(context, contingency.getContingency(),
-                lfContingency, preContingencyLimitViolationManager, preContingencyNetworkResult, createResultExtension,
-                violationsParameters, postContingencyStates, limitReductions);
-
-        stopwatch.stop();
-        logPostContingencyEnd(context.getNetwork(), lfContingency, stopwatch);
-
-        return postContingencyResult;
-    }
-
-    /**
      * Returns the operator strategy result associated to the given post contingency and post operator strategy states.
      */
     private OperatorStrategyResult computeOperatorStrategyResultFromPostContingencyAndOperatorStrategyStates(DcLoadFlowContext loadFlowContext, LfContingency lfContingency, OperatorStrategy operatorStrategy,
                                                                                                              List<LfAction> operatorStrategyLfActions, LimitViolationManager preContingencyLimitViolationManager,
                                                                                                              boolean createResultExtension, SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters,
-                                                                                                             double[] postContingencyAndOperatorStrategyStates, List<LimitReduction> limitReductions) {
+                                                                                                             double[] postContingencyAndOperatorStrategyStates, List<LimitReduction> limitReductions, NetworkDcRestrictiveLimits dcRestrictiveLimits) {
         // update network state with post contingency and post operator strategy states
         LfNetwork lfNetwork = loadFlowContext.getNetwork();
-        loadFlowContext.getEquationSystem().getStateVector().set(postContingencyAndOperatorStrategyStates);
-        updateNetwork(lfNetwork, loadFlowContext.getEquationSystem(), postContingencyAndOperatorStrategyStates);
 
-        // apply modifications to compute results
-        lfContingency.apply(loadFlowContext.getParameters().getBalanceType());
-        LfActionUtils.applyListOfActions(operatorStrategyLfActions, lfNetwork, lfContingency, loadFlowContext.getParameters().getNetworkParameters(), reportNode);
+        // get the pst actions by branch id
+        Map<String, LfPhaseTapChangerAction> pstActionsByBranchId = operatorStrategyLfActions.stream()
+                .collect(Collectors.toMap(
+                        action -> ((LfPhaseTapChangerAction) action).getChange().getBranch().getId(),
+                        action -> (LfPhaseTapChangerAction) action
+                ));
+
+        NetworkDcVectorState dcVecState = new NetworkDcVectorState(postContingencyAndOperatorStrategyStates, lfNetwork, lfContingency,
+                pstActionsByBranchId, loadFlowContext.getParameters().getEquationSystemCreationParameters());
 
         // update network result
-        var postActionsNetworkResult = new PreContingencyNetworkResult(lfNetwork, monitorIndex, createResultExtension);
-        postActionsNetworkResult.update();
+        var postActionsNetworkResult = new PreContingencyNetworkResult(lfNetwork, monitorIndex, createResultExtension,
+                dcVecState.createBranchResultCreator());
+        postActionsNetworkResult.update(lfBranch -> dcVecState.disabled[lfBranch.getNum()]);
 
         // detect violations
-        var postActionsViolationManager = new LimitViolationManager(preContingencyLimitViolationManager, limitReductions, violationsParameters);
-        postActionsViolationManager.detectViolations(lfNetwork);
+        var postActionsLimitViolationManager = new LimitViolationManager(preContingencyLimitViolationManager, limitReductions, violationsParameters);
+        dcVecState.detectBranchViolations(postActionsLimitViolationManager, lfNetwork, dcRestrictiveLimits);
 
         return new OperatorStrategyResult(operatorStrategy, PostContingencyComputationStatus.CONVERGED,
-                new LimitViolationsResult(postActionsViolationManager.getLimitViolations()),
+                new LimitViolationsResult(postActionsLimitViolationManager.getLimitViolations()),
                 new NetworkResult(postActionsNetworkResult.getBranchResults(),
                         postActionsNetworkResult.getBusResults(),
                         postActionsNetworkResult.getThreeWindingsTransformerResults()));
     }
 
     /**
-     * Returns operator strategy result associated to the given operator strategy, with given supplier of post contingency and post operator strategy states.
-     */
-    private OperatorStrategyResult processOperatorStrategyResult(DcLoadFlowContext context, LfContingency contingency, OperatorStrategy operatorStrategy,
-                                                                 Function<List<LfAction>, double[]> postContingencyAndOperatorStrategyStatesSupplier,
-                                                                 LimitViolationManager preContingencyLimitViolationManager, PostContingencyResult postContingencyResult,
-                                                                 Map<String, LfAction> lfActionById, boolean createResultExtension, SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters,
-                                                                 List<LimitReduction> limitReductions) {
-        // get the actions associated to the operator strategy
-        List<String> actionIds = checkCondition(operatorStrategy, postContingencyResult.getLimitViolationsResult());
-        List<LfAction> operatorStrategyLfActions = actionIds.stream()
-                .map(lfActionById::get)
-                .filter(Objects::nonNull)
-                .toList();
-
-        logActionStart(context.getNetwork(), operatorStrategy);
-        Stopwatch stopwatch = Stopwatch.createStarted();
-
-        double[] postContingencyAndOperatorStrategyStates = postContingencyAndOperatorStrategyStatesSupplier.apply(operatorStrategyLfActions);
-        OperatorStrategyResult operatorStrategyResult = computeOperatorStrategyResultFromPostContingencyAndOperatorStrategyStates(context, contingency, operatorStrategy, operatorStrategyLfActions,
-                preContingencyLimitViolationManager, createResultExtension, violationsParameters, postContingencyAndOperatorStrategyStates, limitReductions);
-
-        stopwatch.stop();
-        logActionEnd(context.getNetwork(), operatorStrategy, stopwatch);
-        return operatorStrategyResult;
-    }
-
-    /**
      * Add the post contingency and operator strategy results, associated to given contingency, in the given list of results.
      * The post contingency and post operator strategy states are computed with given supplier and function.
      */
-    private void addPostContingencyAndOperatorStrategyResults(DcLoadFlowContext context, PropagatedContingency contingency, Map<String, List<OperatorStrategy>> operatorStrategiesByContingencyId,
-                                                              Map<String, LfAction> lfActionById, Supplier<double[]> toPostContingencyStates, Function<List<LfAction>, double[]> toPostContingencyAndOperatorStrategyStates,
+    private void addPostContingencyAndOperatorStrategyResults(DcLoadFlowContext context, ConnectivityAnalysisResult connectivityAnalysisResult, Map<String, List<OperatorStrategy>> operatorStrategiesByContingencyId,
+                                                              Map<String, LfAction> lfActionById, Function<ConnectivityAnalysisResult, double[]> toPostContingencyStates,
+                                                              BiFunction<ConnectivityAnalysisResult, List<LfAction>, double[]> toPostContingencyAndOperatorStrategyStates,
                                                               Runnable restorePreContingencyStates, LimitViolationManager preContingencyLimitViolationManager, PreContingencyNetworkResult preContingencyNetworkResult,
                                                               boolean createResultExtension, SecurityAnalysisParameters.IncreasedViolationsParameters violationsParameters, List<LimitReduction> limitReductions,
-                                                              List<PostContingencyResult> postContingencyResults, List<OperatorStrategyResult> operatorStrategyResults) {
-        LfNetwork lfNetwork = context.getNetwork();
+                                                              NetworkDcRestrictiveLimits dcRestrictiveLimits, List<PostContingencyResult> postContingencyResults, List<OperatorStrategyResult> operatorStrategyResults) {
         // process results only if contingency impacts the network
-        contingency.toLfContingency(lfNetwork, false).ifPresent(lfContingency -> {
-            ReportNode postContSimReportNode = Reports.createPostContingencySimulation(lfNetwork.getReportNode(), contingency.getContingency().getId());
+        connectivityAnalysisResult.toLfContingency().ifPresent(lfContingency -> {
+            LfNetwork lfNetwork = context.getNetwork();
+
+            Contingency contingency = connectivityAnalysisResult.getPropagatedContingency().getContingency();
+            ReportNode postContSimReportNode = Reports.createPostContingencySimulation(lfNetwork.getReportNode(), contingency.getId());
             lfNetwork.setReportNode(postContSimReportNode);
 
-            // process post contingency result with supplier giving post contingency states
-            PostContingencyResult postContingencyResult = processPostContingencyResult(context, contingency, lfContingency, toPostContingencyStates, preContingencyLimitViolationManager,
-                    preContingencyNetworkResult, createResultExtension, violationsParameters, limitReductions);
+            // process post contingency result
+            double[] postContingencyStates = toPostContingencyStates.apply(connectivityAnalysisResult);
+            PostContingencyResult postContingencyResult = computePostContingencyResultFromPostContingencyStates(context, contingency,
+                    lfContingency, preContingencyLimitViolationManager, preContingencyNetworkResult, createResultExtension,
+                    violationsParameters, postContingencyStates, limitReductions, dcRestrictiveLimits);
             postContingencyResults.add(postContingencyResult);
 
             // restore pre contingency states for next calculation
             restorePreContingencyStates.run();
 
-            List<OperatorStrategy> operatorStrategiesForThisContingency = operatorStrategiesByContingencyId.get(contingency.getContingency().getId());
+            List<OperatorStrategy> operatorStrategiesForThisContingency = operatorStrategiesByContingencyId.get(contingency.getId());
             if (operatorStrategiesForThisContingency != null) {
                 for (OperatorStrategy operatorStrategy : operatorStrategiesForThisContingency) {
                     ReportNode osSimReportNode = Reports.createOperatorStrategySimulation(postContSimReportNode, operatorStrategy.getId());
                     lfNetwork.setReportNode(osSimReportNode);
 
-                    // process operator strategy result with supplier giving post contingency and post operator strategy states
-                    OperatorStrategyResult operatorStrategyResult = processOperatorStrategyResult(context, lfContingency, operatorStrategy, toPostContingencyAndOperatorStrategyStates, preContingencyLimitViolationManager,
-                            postContingencyResult, lfActionById, createResultExtension, violationsParameters, limitReductions);
+                    // process operator strategy result
+                    // get the actions associated to the operator strategy
+                    List<String> actionIds = checkCondition(operatorStrategy, postContingencyResult.getLimitViolationsResult());
+                    List<LfAction> operatorStrategyLfActions = actionIds.stream()
+                            .map(lfActionById::get)
+                            .filter(Objects::nonNull)
+                            .toList();
+
+                    double[] postContingencyAndOperatorStrategyStates = toPostContingencyAndOperatorStrategyStates.apply(connectivityAnalysisResult, operatorStrategyLfActions);
+                    OperatorStrategyResult operatorStrategyResult = computeOperatorStrategyResultFromPostContingencyAndOperatorStrategyStates(context, lfContingency, operatorStrategy, operatorStrategyLfActions,
+                            preContingencyLimitViolationManager, createResultExtension, violationsParameters, postContingencyAndOperatorStrategyStates, limitReductions,
+                            dcRestrictiveLimits);
                     operatorStrategyResults.add(operatorStrategyResult);
 
                     // restore pre contingency states for next calculation
@@ -416,13 +474,19 @@ public class WoodburyDcSecurityAnalysis extends DcSecurityAnalysis {
                 }
             }
 
+            NetworkDcRestrictiveLimits dcRestrictiveLimits = new NetworkDcRestrictiveLimits(lfNetwork, limitReductions);
+
+            NetworkDcVectorState dcVecState = new NetworkDcVectorState(preContingencyStates, lfNetwork, null,
+                    Collections.emptyMap(), context.getParameters().getEquationSystemCreationParameters());
+
             // update network result
-            var preContingencyNetworkResult = new PreContingencyNetworkResult(lfNetwork, monitorIndex, createResultExtension);
+            var preContingencyNetworkResult = new PreContingencyNetworkResult(lfNetwork, monitorIndex, createResultExtension,
+                    dcVecState.createBranchResultCreator());
             preContingencyNetworkResult.update();
 
             // detect violations
             var preContingencyLimitViolationManager = new LimitViolationManager(limitReductions);
-            preContingencyLimitViolationManager.detectViolations(lfNetwork);
+            dcVecState.detectBranchViolations(preContingencyLimitViolationManager, lfNetwork, dcRestrictiveLimits);
 
             // compute states with +1 -1 to model the contingencies and run connectivity analysis
             ConnectivityBreakAnalysis.ConnectivityBreakAnalysisResults connectivityBreakAnalysisResults = ConnectivityBreakAnalysis.run(context, propagatedContingencies);
@@ -431,52 +495,42 @@ public class WoodburyDcSecurityAnalysis extends DcSecurityAnalysis {
             Map<String, ComputedTapPositionChangeElement> tapPositionChangeElementsByBranchId = createTapPositionChangeElementsIndexByBranchId(lfActionById, context.getEquationSystem());
             DenseMatrix actionsStates = ComputedElement.calculateElementsStates(context, tapPositionChangeElementsByBranchId.values());
 
-            // save base state for later restoration after each contingency/action
-            NetworkState networkState = NetworkState.save(lfNetwork);
-
             List<PostContingencyResult> postContingencyResults = new ArrayList<>();
             List<OperatorStrategyResult> operatorStrategyResults = new ArrayList<>();
 
+            // supplier to compute post contingency states
+            // no need to distribute active mismatch due to connectivity modifications
+            // this is handled when the slack is distributed in pre contingency states override
+            Function<ConnectivityAnalysisResult, double[]> toPostContingencyStates = connectivityAnalysisResult -> calculatePostContingencyStates(context, connectivityBreakAnalysisResults.contingenciesStates(),
+                    workingContingencyStates, connectivityAnalysisResult, connectivityBreakAnalysisResults.contingencyElementByBranch(), reportNode);
+            // function to compute post contingency and post operator strategy states
+            BiFunction<ConnectivityAnalysisResult, List<LfAction>, double[]> toPostContingencyAndOperatorStrategyStates = (connectivityAnalysisResult, operatorStrategyLfActions) ->
+                    calculatePostContingencyAndOperatorStrategyStates(context, connectivityBreakAnalysisResults.contingenciesStates(), workingContingencyStates,
+                            connectivityAnalysisResult, connectivityBreakAnalysisResults.contingencyElementByBranch(),
+                            operatorStrategyLfActions, tapPositionChangeElementsByBranchId, actionsStates, reportNode);
+
             LOGGER.info("Processing post contingency results for contingencies with no connectivity break");
             connectivityBreakAnalysisResults.nonBreakingConnectivityContingencies().forEach(nonBreakingConnectivityContingency -> {
-                // supplier to compute post contingency states
-                Supplier<double[]> toPostContingencyStates = () -> calculatePostContingencyStates(context, connectivityBreakAnalysisResults.contingenciesStates(), workingContingencyStates,
-                        nonBreakingConnectivityContingency, connectivityBreakAnalysisResults.contingencyElementByBranch(), Collections.emptySet(), Collections.emptySet(), Collections.emptySet(), reportNode);
-                // function to compute post contingency and post operator strategy states
-                Function<List<LfAction>, double[]> toPostContingencyAndOperatorStrategyStates = operatorStrategyLfActions -> calculatePostContingencyAndOperatorStrategyStates(context, connectivityBreakAnalysisResults.contingenciesStates(), workingContingencyStates,
-                        nonBreakingConnectivityContingency, connectivityBreakAnalysisResults.contingencyElementByBranch(), Collections.emptySet(), Collections.emptySet(), Collections.emptySet(),
-                        operatorStrategyLfActions, tapPositionChangeElementsByBranchId, actionsStates, reportNode);
+                ConnectivityAnalysisResult connectivityAnalysisResult = new ConnectivityAnalysisResult(nonBreakingConnectivityContingency, lfNetwork);
                 // runnable to restore pre contingency states, after modifications applied to the lfNetwork
                 Runnable restorePreContingencyStates = () -> {
                     // update workingContingencyStates as it may have been updated by post contingency states calculation
                     System.arraycopy(preContingencyStates, 0, workingContingencyStates, 0, preContingencyStates.length);
-                    // restore pre contingency state
-                    networkState.restore();
                 };
-                addPostContingencyAndOperatorStrategyResults(context, nonBreakingConnectivityContingency, operatorStrategiesByContingencyId, lfActionById, toPostContingencyStates,
+                addPostContingencyAndOperatorStrategyResults(context, connectivityAnalysisResult, operatorStrategiesByContingencyId, lfActionById, toPostContingencyStates,
                         toPostContingencyAndOperatorStrategyStates, restorePreContingencyStates, preContingencyLimitViolationManager, preContingencyNetworkResult, createResultExtension,
-                        securityAnalysisParameters.getIncreasedViolationsParameters(), limitReductions, postContingencyResults, operatorStrategyResults);
+                        securityAnalysisParameters.getIncreasedViolationsParameters(), limitReductions, dcRestrictiveLimits, postContingencyResults, operatorStrategyResults);
             });
 
             LOGGER.info("Processing post contingency results for contingencies breaking connectivity");
             connectivityBreakAnalysisResults.connectivityAnalysisResults()
                     .forEach(connectivityAnalysisResult -> {
-                        PropagatedContingency breakingConnectivityContingency = connectivityAnalysisResult.getPropagatedContingency();
-                        // supplier to compute post contingency states
-                        // no need to distribute active mismatch due to connectivity modifications
-                        // this is handled when the slack is distributed in pre contingency states override
-                        Supplier<double[]> toPostContingencyStates = () -> calculatePostContingencyStatesForAContingencyBreakingConnectivity(connectivityAnalysisResult, context,
-                                connectivityBreakAnalysisResults.contingencyElementByBranch(), workingContingencyStates, connectivityBreakAnalysisResults.contingenciesStates(), reportNode);
-                        // function to compute post contingency and post operator strategy states
-                        Function<List<LfAction>, double[]> toPostContingencyAndOperatorStrategyStates = operatorStrategyLfActions -> calculatePostContingencyAndOperatorStrategyStatesForAContingencyBreakingConnectivity(connectivityAnalysisResult, context,
-                                connectivityBreakAnalysisResults.contingencyElementByBranch(), workingContingencyStates, connectivityBreakAnalysisResults.contingenciesStates(),
-                                operatorStrategyLfActions, tapPositionChangeElementsByBranchId, actionsStates, reportNode);
                         // runnable to restore pre contingency states, after modifications applied to the lfNetwork
                         // no need to update workingContingencyStates as an override of flow states will be computed
-                        Runnable restorePreContingencyStates = networkState::restore;
-                        addPostContingencyAndOperatorStrategyResults(context, breakingConnectivityContingency, operatorStrategiesByContingencyId, lfActionById, toPostContingencyStates,
+                        Runnable restorePreContingencyStates = () -> { };
+                        addPostContingencyAndOperatorStrategyResults(context, connectivityAnalysisResult, operatorStrategiesByContingencyId, lfActionById, toPostContingencyStates,
                                 toPostContingencyAndOperatorStrategyStates, restorePreContingencyStates, preContingencyLimitViolationManager, preContingencyNetworkResult, createResultExtension,
-                                securityAnalysisParameters.getIncreasedViolationsParameters(), limitReductions, postContingencyResults, operatorStrategyResults);
+                                securityAnalysisParameters.getIncreasedViolationsParameters(), limitReductions, dcRestrictiveLimits, postContingencyResults, operatorStrategyResults);
                     });
 
             return new SecurityAnalysisResult(
